--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,12 +75,12 @@ jobs:
           Name=Playfield Engine
           Exec=playfield
           Icon=playfield
-          Categories=Game;Development;
+          Categories=Game;
           EOF
           cp resources/icon.png AppDir/playfield.png
 
       - name: Create AppImage
-        run: ./appimagetool-x86_64.AppImage AppDir PlayfieldEngine-x86_64.AppImage
+        run: ARCH=x86_64 ./appimagetool-x86_64.AppImage AppDir PlayfieldEngine-x86_64.AppImage
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
