--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,9 +53,12 @@ jobs:
 
       - name: Install deps
         run: |
-          sudo sed -i 's|http://archive.ubuntu.com/ubuntu|http://ports.ubuntu.com/ubuntu-ports|g' /etc/apt/sources.list.d/ubuntu.sources
-          sudo sed -i 's|noble-security||g' /etc/apt/sources.list.d/ubuntu.sources
-          sudo sed -i 's|Architectures: amd64|Architectures: amd64 arm64|g' /etc/apt/sources.list.d/ubuntu.sources
+          sudo rm /etc/apt/sources.list.d/ubuntu.sources
+          cat <<'EOF' | sudo tee /etc/apt/sources.list
+          deb [arch=amd64,arm64] http://ports.ubuntu.com/ubuntu-ports noble main restricted universe multiverse
+          deb [arch=amd64,arm64] http://ports.ubuntu.com/ubuntu-ports noble-updates main restricted universe multiverse
+          deb [arch=amd64,arm64] http://ports.ubuntu.com/ubuntu-ports noble-backports main restricted universe multiverse
+          EOF
           sudo apt-get update
           sudo apt-get install -y cmake build-essential libx11-dev libxpm-dev libasound2-dev mesa-common-dev flex bison libfuse2 gcc-aarch64-linux-gnu
           sudo apt-get install -y libx11-dev:arm64 libxpm-dev:arm64 libasound2-dev:arm64 mesa-common-dev:arm64
