--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,10 +53,10 @@ jobs:
 
       - name: Install deps
         run: |
-          sudo dpkg --add-architecture arm64
           sudo sed -i 's|http://archive.ubuntu.com/ubuntu|http://ports.ubuntu.com/ubuntu-ports|g' /etc/apt/sources.list
           sudo sed -i '/security/d' /etc/apt/sources.list
           sudo sed -i '/backports/d' /etc/apt/sources.list
+          sudo sed -i 's|^deb http|deb [arch=amd64,arm64] http|' /etc/apt/sources.list
           sudo apt-get update
           sudo apt-get install -y cmake build-essential libx11-dev libxpm-dev libasound2-dev mesa-common-dev flex bison libfuse2 gcc-aarch64-linux-gnu
           sudo apt-get install -y libx11-dev:arm64 libxpm-dev:arm64 libasound2-dev:arm64 mesa-common-dev:arm64
