--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,9 +54,8 @@ jobs:
       - name: Install deps
         run: |
           sudo tee /etc/apt/sources.list <<'EOF'
-          deb [arch=amd64,arm64] http://ports.ubuntu.com/ubuntu-ports noble main restricted universe multiverse
-          deb [arch=amd64,arm64] http://ports.ubuntu.com/ubuntu-ports noble-updates main restricted universe multiverse
-          deb [arch=amd64,arm64] http://ports.ubuntu.com/ubuntu-ports noble-backports main restricted universe multiverse
+          deb [arch=amd64] http://archive.ubuntu.com/ubuntu-ports noble main restricted universe multiverse
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble main restricted universe multiverse
           EOF
           sudo apt-get update
           sudo apt-get install -y cmake build-essential libx11-dev libxpm-dev libasound2-dev mesa-common-dev flex bison libfuse2 gcc-aarch64-linux-gnu
