--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,11 +45,6 @@ jobs:
           if-no-files-found: error
           retention-days: 7
 
-      - name: Build (Release)
-        run: cmake --build --preset windows-msvc-x64-release --config Release --parallel
-
-
-
   build-linux:
     runs-on: ubuntu-22.04
 
@@ -112,7 +107,7 @@ jobs:
           cp build/playfield AppDir/usr/bin/
           cp resources/linux/AppRun AppDir/
           qemu-aarch64-static ./appimagetool-aarch64.AppImage --appimage-extract
-          ARCH=aarch64 qemu-aarch64-static ./squashfs-root/usr/bin/appimagetool AppDir PlayfieldEngine-aarch64.AppImage
+          qemu-aarch64-static ARCH=aarch64 ./squashfs-root/usr/bin/appimagetool AppDir PlayfieldEngine-aarch64.AppImage
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
