--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,9 +118,7 @@ jobs:
           cp playfield.desktop AppDir/
           cp resources/icon.png AppDir/playfield.png
           qemu-aarch64-static ./appimagetool-aarch64.AppImage --appimage-extract
-          export ARCH=aarch64
-          env ARCH=aarch64 qemu-aarch64-static ./squashfs-root/usr/bin/appimagetool AppDir PlayfieldEngine-aarch64.AppImage
-          unset ARCH
+          ARCH=arm_aarch64 qemu-aarch64-static ./squashfs-root/usr/bin/appimagetool AppDir PlayfieldEngine-aarch64.AppImage
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
