--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
           deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-backports main restricted universe multiverse
           EOF
           sudo apt-get update
-          sudo apt-get install -y cmake build-essential libx11-dev libxpm-dev libasound2-dev mesa-common-dev flex bison libfuse2 gcc-aarch64-linux-gnu qemu-user-static binfmt-support desktop-file-utils appstream
+          sudo apt-get install -y cmake build-essential libx11-dev libxpm-dev libasound2-dev mesa-common-dev flex bison libfuse2 gcc-aarch64-linux-gnu qemu-user-static binfmt-support desktop-file-utils appstream squashfs-tools
           sudo apt-get install -y libx11-dev:arm64 libxpm-dev:arm64 libasound2-dev:arm64 mesa-common-dev:arm64 libglib2.0-0:arm64 libgobject-2.0-0:arm64 libgdk-pixbuf-2.0-0:arm64 libfuse2:arm64 libgcrypt20:arm64 libgpgme-dev:arm64
 
       - name: Download appimagetool
@@ -118,7 +118,7 @@ jobs:
           cp playfield.desktop AppDir/
           cp resources/icon.png AppDir/playfield.png
           qemu-aarch64-static ./appimagetool-aarch64.AppImage --appimage-extract
-          ARCH=arm_aarch64 qemu-aarch64-static ./squashfs-root/usr/bin/appimagetool AppDir PlayfieldEngine-aarch64.AppImage
+          ARCH=arm_aarch64 MKSQUASHFS=/usr/bin/mksquashfs qemu-aarch64-static ./squashfs-root/usr/bin/appimagetool AppDir PlayfieldEngine-aarch64.AppImage
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
