--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,7 +118,8 @@ jobs:
           cp playfield.desktop AppDir/
           cp resources/icon.png AppDir/playfield.png
           qemu-aarch64-static ./appimagetool-aarch64.AppImage --appimage-extract
-          ARCH=arm_aarch64 MKSQUASHFS=/usr/bin/mksquashfs qemu-aarch64-static ./squashfs-root/usr/bin/appimagetool AppDir PlayfieldEngine-aarch64.AppImage
+          cp /usr/bin/mksquashfs ./squashfs-root/usr/lib/lib/appimagekit/mksquashfs
+          ARCH=arm_aarch64 qemu-aarch64-static ./squashfs-root/usr/bin/appimagetool AppDir PlayfieldEngine-aarch64.AppImage
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
