Add console window on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -440,6 +440,20 @@ if(PLAYFIELD_TARGET_WINDOWS)
 endif()
 
 #
+# Compiler target
+#
+
+add_executable(
+  playfield-compiler
+  src/compiler.c
+)
+target_include_directories(playfield-compiler PRIVATE external/NoctLang/src)
+target_link_libraries(playfield-compiler noctlang)
+if(UNIX)
+  target_link_libraries(playfield-compiler m)
+endif()
+
+#
 # macOS Bundle
 #
 
